0.83.8
  - 
0.83.7
  - The primary DOSBox-X Wiki is now located at the
    URL: https://dosbox-x.com/wiki (Wengier)
  - Implemented the x86 dynamic core for both 32-bit
    and 64-bit systems by re-porting the code from SVN.
    Dynamic core now supports either the dynamic_x86
    or the dynamic_rec core. The dynamic_x86 core will
    be used by default for x86 and x86_64 platforms and
    if "core=dynamic" is set, and Windows 9x can be run
    in this dynamic core (although at this time may
    encounter some issue with the S3 driver). You can
    also explicit specify setting "core=dynamic_x86" or
    "core=dynamic_rec" for either the dynamic_x86 core
    or the dynamic_rec core. Also thank joncampbell123
    for the 64-bit fix. (Wengier)
  - You can now use your own save file (in addition to
    save slots! There are now a "Use save file" toggle
    item and "Browse save file..." for browsing save
    files on your computer. A config option "savefile"
    (in [dosbox] section) is added to specify a save
    file to use at start. (Wengier)
  - Save state feature now allows users to optionally
    enter remarks when saving a state. A submenu group
    "Save/load option" is added (under "Capture") where
    you can toggle menu items "No remark when saving
    state" (for disabling input of remarks when saving)
    and "force load state mode". A menu item "Display
    state information" is added as well to display the
    information of the saved state. (Wengier)
  - DOSBox-X will now use native dialog box to display
    quit warnings and save state errors. (Wengier)
  - Changed some DOS error messages (such as "Illegal
    command" which now reads "Bad command or filename")
    similar to real DOS systems. (Wengier)
  - ADDKEY and INT2FDBG commands now appear as programs
    on Z: drive instead of shell commands. (Wengier)
  - Improved the -z (move virtual drive Z:) function of
    MOUNT command. You can move the virtual drive as